--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                         <div class="toilet-container">
-                            <img src="images/chair.png" alt="A toilet">
+                            <img class="toilet">
                         </div>
                     </div>
                 </div>
